--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-flow": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "flow-bin": "^0.141.0",
     "jest": "^26.6.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
