--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "esModuleInterop": true,
     "jsx": "react"
   },
-  "include": ["src/**/*", "playground/**/*"]
+  "include": ["src/**/*", "playground/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
