--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.2",
   "description": "Typed Modular 2D Game Engine for Web",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
