--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "bracketSpacing": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "arrowParens": "avoid"
 }
