--- a/package.json
+++ b/package.json
@@ -42,8 +42,16 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.1",
+    "pixi.js-legacy": "^5.3.7",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
+  },
+  "jest": {
+    "setupFiles": [
+      "jest-canvas-mock",
+      "pixi.js-legacy"
+    ]
   }
 }
