--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "collision-detection",
     "physics"
   ],
+  "files": [
+    "bin/",
+    "src/",
+    "templates/"
+  ],
   "dependencies": {
     "eventemitter3": "^4.0.7",
     "pixi.js": "^5.3.7"
@@ -44,6 +49,8 @@
     "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "chalk": "^4.1.0",
+    "fs-extra": "^9.1.0",
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.1",
     "pixi.js-legacy": "^5.3.7",
